--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://artix97.github.io/ImagesCarrousel",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.0",
+    "gh-pages": "^5.0.0",
     "pexels": "^1.4.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
@@ -18,6 +20,8 @@
     "yup": "^1.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
